kubernetes/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: yelli
  namespace: yelli
  labels:
    app: yelli
    stage: production
    name: yelli
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: yelli
        name: yelli
        stage: production
    spec:
      containers:
        - name: yelli
          image: us.gcr.io/yelli-232214/yelli:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      restartPolicy: Always
