kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: yelli
  namespace: default
spec:
  selector:
    app: yelli
    name: yelli
    stage: production
  ports:
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
