kubernetes/isto.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: yelli-gateway
spec:
  selector:
    istio: isto-ingressgateway
  servers:
    - port:
        number: 80
        name: tcp
        protocol: TCP
      hosts:
        - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: yelli-virtualservice
spec:
  hosts:
    - '*'
  gateways:
    - yelli-gateway
  tcp:
    - match:
        - port: 80
      route:
        - destination:
            host: yelli
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: yelli
spec:
  host: yelli
  subsets:
    - name: v1
      labels:
        version: v1
